# newtone_mvp

./: .gitignore  README.md  newtone_translate.py  pyproject.toml  simple_translate_example.py
config/: settings.yaml
config/brand/default/: brand_guidelines.json  dnt.json  glossary.json
data/input/html/: cta.html  input.html  input2.html  product.html  technical.html
data/input/markdown/: cta.md  input.md  product.md  technical.md
data/input/text/: input.txt
src/newtone_translate/: __init__.py
src/newtone_translate/application/: __init__.py  config_service.py  format_service.py  translation_service.py
src/newtone_translate/domain/: __init__.py  content_processor.py  models.py  placeholder_manager.py
src/newtone_translate/infrastructure/: __init__.py  logging.py  storage.py
src/newtone_translate/infrastructure/parsers/: __init__.py  html_parser.py
src/newtone_translate/infrastructure/providers/: __init__.py  base.py  mock_provider.py  openai_provider.py  provider_factory.py
src/newtone_translate/presentation/: __init__.py  cli.py
tests/: README.md  conftest.py  test_runner.py
tests/fixtures/: __init__.py
tests/integration/: test_translation_workflow.py
tests/unit/: test_application_services.py  test_content_processor.py  test_infrastructure_providers.py  test_placeholder_manager.py
